# FA2025-CS511-MP2-hnsw

./: pyproject.toml
part0/: starter_code_HNSW.py
part1/: part1_benchmark.py  part1_hnsw_results.csv  part1_lsh_results.csv  part1_results.csv
part2/: part2_benchmark.py  part2_report.md  part2_results.csv
part3/: part3_benchmark.py  part3_diskann_results.csv  part3_hnsw_results.csv  part3_results.csv
